fix: Update background color in CSS for improved contrast

--- a/aoc_leader/src/index.css
+++ b/aoc_leader/src/index.css
@@ -5,7 +5,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #2f3d21;
+  background-color: #315013;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
